httpd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rhel-httpd-ingress
  namespace: rhel-httpd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: rhel-httpd.home.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: rhel-httpd-svc
            port:
              number: 8080
